--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "song/face-api",
+    "name": "firstmeet/face-api",
     "description": "baidu face api",
     "type": "project",
     "license": "MIT",
