--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "firstmeet/face-api",
     "description": "baidu face api",
-    "type": "project",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
